Fix layout issues
Remove unused .main selector
Consolidate section styling onto the section selector

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,7 @@
-@media (min-width: 480px) {
+@media (min-width: 600px) {
 
 .container{
-    width:480px;
+    flex: 0 0 580px;
     
 }
 
